docker-scripts/radarr/radarr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: radarr
    spec:
      containers:
      - env:
        - name: PGID
          value: "1001"
        - name: PUID
          value: "1001"
        - name: TZ
          value: '"Africa/Johannaesburg"'
        image: linuxserver/radarr
        name: radarr
        ports:
        - containerPort: 7878
        resources: {}
        volumeMounts:
        - mountPath: /dev/rtc
          name: radarr-claim0
          readOnly: true
        - mountPath: /config
          name: radarr-claim1
        - mountPath: /downloads
          name: downloads
        - mountPath: /blackhole
          name: blackhole
        - mountPath: /movies
          name: radarr-claim4
        - mountPath: /red/downloads
          name: radarr-claim5
      restartPolicy: Always
      volumes:
      - name: radarr-claim0
        persistentVolumeClaim:
          claimName: radarr-claim0
          readOnly: true
      - name: radarr-claim1
        persistentVolumeClaim:
          claimName: radarr-claim1
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: blackhole
        persistentVolumeClaim:
          claimName: blackhole
      - name: radarr-claim4
        persistentVolumeClaim:
          claimName: radarr-claim4
      - name: radarr-claim5
        persistentVolumeClaim:
          claimName: radarr-claim5
status: {}
