docker-scripts/radarr/radarr.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /blackhole
          name: blackhole
        - mountPath: /movies
          name: movies
        - mountPath: /red/downloads
          name: downloads
        resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
      - name: config
        hostPath:
          path: /home/docker/radarr/config
          type: Directory
      - name: downloads
        hostPath:
          path: /red/downloads
          type: Directory
      - name: blackhole
        hostPath:
          path: /red/blackhole
          type: Directory
      - name: movies
        hostPath:
          path: /red/Movies
          type: Directory
