docker-scripts/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  ports:
  - name: "7878"
    port: 7878
    targetPort: 7878
  selector:
    io.kompose.service: radarr
status:
  loadBalancer: {}
