docker-scripts/radarr/radarr.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      name: http
      port: 7878
      targetPort: 7878
