docker-scripts/radarr/radarr.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: radarr
    namespace: radarr
    annotations:
        kubernetes.io/ingress.class: "public"
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
    tls:
        - hosts:
              - 6f3806410f7b.sn.mynetname.net
          secretName: radarr-secret
        - hosts:
              - radarr.arendse.nom.za
          secretName: arendse-radarr
    rules:
        - host: radarr.lan
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: radarr
                            port:
                                name: http
        - host: 6f3806410f7b.sn.mynetname.net
          http:
              paths:
                  - path: /radarr
                    pathType: Prefix
                    backend:
                        service:
                            name: radarr
                            port:
                                name: http
        - host: radarr.arendse.nom.za
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: radarr
                            port:
                                name: http
