docker-scripts/radarr/radarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /dev/rtc
          name: rtc
          readOnly: true
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /blackhole
          name: blackhole
        - mountPath: /movies
          name: movies
        - mountPath: /red/downloads
          name: downloads
      volumes:
      - name: rtc
        hostPath:
          path: /dev/rtc
          type: File
      - name: config
        hostPath:
          path: /home/docker/radarr/config
          type: Directory
      - name: downloads
        hostPath:
          path: /red/downloads
          type: Directory
      - name: blackhole
        hostPath:
          path: /red/blackhole
          type: Directory
      - name: movies
        hostPath:
          path: /red/Movies
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.arendse.xyz
    secretName: radarr-secret
  rules:
  - host: www.arendse.xyz
    http:
      paths:
      - path: /radarr
        backend:
          serviceName: radarr
          servicePort: 7878
